# gen/go/buttons/api/v1/auth.pb.go
@@ -124,6 +124,123 @@ func (x *GetRedirectURLResponse) GetRedirectUrl() string {
 	return ""
 }
 
+type GetCallbackRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	State    string `protobuf:"bytes,1,opt,name=state,proto3" json:"state,omitempty"`
+	Code     string `protobuf:"bytes,2,opt,name=code,proto3" json:"code,omitempty"`
+	Scope    string `protobuf:"bytes,3,opt,name=scope,proto3" json:"scope,omitempty"`
+	Authuser string `protobuf:"bytes,4,opt,name=authuser,proto3" json:"authuser,omitempty"`
+	Prompt   string `protobuf:"bytes,5,opt,name=prompt,proto3" json:"prompt,omitempty"`
+}
+
+func (x *GetCallbackRequest) Reset() {
+	*x = GetCallbackRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_buttons_api_v1_auth_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetCallbackRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetCallbackRequest) ProtoMessage() {}
+
+func (x *GetCallbackRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_buttons_api_v1_auth_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetCallbackRequest.ProtoReflect.Descriptor instead.
+func (*GetCallbackRequest) Descriptor() ([]byte, []int) {
+	return file_buttons_api_v1_auth_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *GetCallbackRequest) GetState() string {
+	if x != nil {
+		return x.State
+	}
+	return ""
+}
+
+func (x *GetCallbackRequest) GetCode() string {
+	if x != nil {
+		return x.Code
+	}
+	return ""
+}
+
+func (x *GetCallbackRequest) GetScope() string {
+	if x != nil {
+		return x.Scope
+	}
+	return ""
+}
+
+func (x *GetCallbackRequest) GetAuthuser() string {
+	if x != nil {
+		return x.Authuser
+	}
+	return ""
+}
+
+func (x *GetCallbackRequest) GetPrompt() string {
+	if x != nil {
+		return x.Prompt
+	}
+	return ""
+}
+
+type GetCallbackResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *GetCallbackResponse) Reset() {
+	*x = GetCallbackResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_buttons_api_v1_auth_proto_msgTypes[3]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetCallbackResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetCallbackResponse) ProtoMessage() {}
+
+func (x *GetCallbackResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_buttons_api_v1_auth_proto_msgTypes[3]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetCallbackResponse.ProtoReflect.Descriptor instead.
+func (*GetCallbackResponse) Descriptor() ([]byte, []int) {
+	return file_buttons_api_v1_auth_proto_rawDescGZIP(), []int{3}
+}
+
 var File_buttons_api_v1_auth_proto protoreflect.FileDescriptor
 
 var file_buttons_api_v1_auth_proto_rawDesc = []byte{
@@ -143,40 +260,62 @@ var file_buttons_api_v1_auth_proto_rawDesc = []byte{
 	0x69, 0x64, 0x65, 0x72, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x70, 0x72, 0x6f, 0x76,
 	0x69, 0x64, 0x65, 0x72, 0x12, 0x21, 0x0a, 0x0c, 0x72, 0x65, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74,
 	0x5f, 0x75, 0x72, 0x6c, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0b, 0x72, 0x65, 0x64, 0x69,
-	0x72, 0x65, 0x63, 0x74, 0x55, 0x72, 0x6c, 0x32, 0xec, 0x01, 0x0a, 0x0b, 0x41, 0x75, 0x74, 0x68,
-	0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0xdc, 0x01, 0x0a, 0x0e, 0x47, 0x65, 0x74, 0x52,
-	0x65, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74, 0x55, 0x52, 0x4c, 0x12, 0x25, 0x2e, 0x62, 0x75, 0x74,
-	0x74, 0x6f, 0x6e, 0x73, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x52,
-	0x65, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74, 0x55, 0x52, 0x4c, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
-	0x74, 0x1a, 0x26, 0x2e, 0x62, 0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x2e, 0x61, 0x70, 0x69, 0x2e,
-	0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x52, 0x65, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74, 0x55, 0x52,
-	0x4c, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x7b, 0x82, 0xd3, 0xe4, 0x93, 0x02,
-	0x1b, 0x12, 0x19, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x75, 0x74, 0x68, 0x2f,
-	0x72, 0x65, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74, 0x5f, 0x75, 0x72, 0x6c, 0x92, 0x41, 0x57, 0x0a,
-	0x0a, 0x4f, 0x41, 0x61, 0x75, 0x74, 0x68, 0x20, 0x32, 0x2e, 0x30, 0x12, 0x1e, 0x67, 0x65, 0x74,
-	0x20, 0x72, 0x65, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74, 0x5f, 0x75, 0x72, 0x6c, 0x20, 0x66, 0x72,
-	0x6f, 0x6d, 0x20, 0x70, 0x72, 0x6f, 0x76, 0x69, 0x64, 0x65, 0x72, 0x1a, 0x29, 0x67, 0x65, 0x6e,
-	0x65, 0x72, 0x61, 0x74, 0x65, 0x20, 0x72, 0x65, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74, 0x5f, 0x75,
-	0x72, 0x6c, 0x20, 0x61, 0x6e, 0x64, 0x20, 0x67, 0x69, 0x76, 0x65, 0x20, 0x74, 0x6f, 0x20, 0x77,
-	0x65, 0x62, 0x76, 0x69, 0x65, 0x77, 0x42, 0x9b, 0x02, 0x0a, 0x12, 0x63, 0x6f, 0x6d, 0x2e, 0x62,
-	0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x42, 0x09, 0x41,
-	0x75, 0x74, 0x68, 0x50, 0x72, 0x6f, 0x74, 0x6f, 0x50, 0x01, 0x5a, 0x3f, 0x67, 0x69, 0x74, 0x68,
+	0x72, 0x65, 0x63, 0x74, 0x55, 0x72, 0x6c, 0x22, 0x88, 0x01, 0x0a, 0x12, 0x47, 0x65, 0x74, 0x43,
+	0x61, 0x6c, 0x6c, 0x62, 0x61, 0x63, 0x6b, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x14,
+	0x0a, 0x05, 0x73, 0x74, 0x61, 0x74, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x73,
+	0x74, 0x61, 0x74, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x18, 0x02, 0x20, 0x01,
+	0x28, 0x09, 0x52, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x12, 0x14, 0x0a, 0x05, 0x73, 0x63, 0x6f, 0x70,
+	0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x73, 0x63, 0x6f, 0x70, 0x65, 0x12, 0x1a,
+	0x0a, 0x08, 0x61, 0x75, 0x74, 0x68, 0x75, 0x73, 0x65, 0x72, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09,
+	0x52, 0x08, 0x61, 0x75, 0x74, 0x68, 0x75, 0x73, 0x65, 0x72, 0x12, 0x16, 0x0a, 0x06, 0x70, 0x72,
+	0x6f, 0x6d, 0x70, 0x74, 0x18, 0x05, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x70, 0x72, 0x6f, 0x6d,
+	0x70, 0x74, 0x22, 0x15, 0x0a, 0x13, 0x47, 0x65, 0x74, 0x43, 0x61, 0x6c, 0x6c, 0x62, 0x61, 0x63,
+	0x6b, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x32, 0xa5, 0x03, 0x0a, 0x0b, 0x41, 0x75,
+	0x74, 0x68, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0xdc, 0x01, 0x0a, 0x0e, 0x47, 0x65,
+	0x74, 0x52, 0x65, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74, 0x55, 0x52, 0x4c, 0x12, 0x25, 0x2e, 0x62,
+	0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65,
+	0x74, 0x52, 0x65, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74, 0x55, 0x52, 0x4c, 0x52, 0x65, 0x71, 0x75,
+	0x65, 0x73, 0x74, 0x1a, 0x26, 0x2e, 0x62, 0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x2e, 0x61, 0x70,
+	0x69, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x52, 0x65, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74,
+	0x55, 0x52, 0x4c, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x7b, 0x82, 0xd3, 0xe4,
+	0x93, 0x02, 0x1b, 0x12, 0x19, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x75, 0x74,
+	0x68, 0x2f, 0x72, 0x65, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74, 0x5f, 0x75, 0x72, 0x6c, 0x92, 0x41,
+	0x57, 0x0a, 0x0a, 0x4f, 0x41, 0x61, 0x75, 0x74, 0x68, 0x20, 0x32, 0x2e, 0x30, 0x12, 0x1e, 0x67,
+	0x65, 0x74, 0x20, 0x72, 0x65, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74, 0x5f, 0x75, 0x72, 0x6c, 0x20,
+	0x66, 0x72, 0x6f, 0x6d, 0x20, 0x70, 0x72, 0x6f, 0x76, 0x69, 0x64, 0x65, 0x72, 0x1a, 0x29, 0x67,
+	0x65, 0x6e, 0x65, 0x72, 0x61, 0x74, 0x65, 0x20, 0x72, 0x65, 0x64, 0x69, 0x72, 0x65, 0x63, 0x74,
+	0x5f, 0x75, 0x72, 0x6c, 0x20, 0x61, 0x6e, 0x64, 0x20, 0x67, 0x69, 0x76, 0x65, 0x20, 0x74, 0x6f,
+	0x20, 0x77, 0x65, 0x62, 0x76, 0x69, 0x65, 0x77, 0x12, 0xb6, 0x01, 0x0a, 0x0b, 0x47, 0x65, 0x74,
+	0x43, 0x61, 0x6c, 0x6c, 0x62, 0x61, 0x63, 0x6b, 0x12, 0x22, 0x2e, 0x62, 0x75, 0x74, 0x74, 0x6f,
+	0x6e, 0x73, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65, 0x74, 0x43, 0x61, 0x6c,
+	0x6c, 0x62, 0x61, 0x63, 0x6b, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x23, 0x2e, 0x62,
+	0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x47, 0x65,
+	0x74, 0x43, 0x61, 0x6c, 0x6c, 0x62, 0x61, 0x63, 0x6b, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
+	0x65, 0x22, 0x5e, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17, 0x12, 0x15, 0x2f, 0x61, 0x70, 0x69, 0x2f,
+	0x76, 0x31, 0x2f, 0x61, 0x75, 0x74, 0x68, 0x2f, 0x63, 0x61, 0x6c, 0x6c, 0x62, 0x61, 0x63, 0x6b,
+	0x92, 0x41, 0x3e, 0x0a, 0x0a, 0x4f, 0x41, 0x61, 0x75, 0x74, 0x68, 0x20, 0x32, 0x2e, 0x30, 0x12,
+	0x11, 0x67, 0x65, 0x74, 0x20, 0x63, 0x61, 0x6c, 0x6c, 0x62, 0x61, 0x63, 0x6b, 0x20, 0x64, 0x61,
+	0x74, 0x61, 0x1a, 0x1d, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x20, 0x73, 0x65, 0x6e, 0x64, 0x20,
+	0x6d, 0x65, 0x20, 0x63, 0x61, 0x6c, 0x6c, 0x62, 0x61, 0x63, 0x6b, 0x20, 0x64, 0x61, 0x74, 0x61,
+	0x20, 0x42, 0x9b, 0x02, 0x0a, 0x12, 0x63, 0x6f, 0x6d, 0x2e, 0x62, 0x75, 0x74, 0x74, 0x6f, 0x6e,
+	0x73, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x42, 0x09, 0x41, 0x75, 0x74, 0x68, 0x50, 0x72,
+	0x6f, 0x74, 0x6f, 0x50, 0x01, 0x5a, 0x3f, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f,
+	0x6d, 0x2f, 0x73, 0x75, 0x6e, 0x64, 0x61, 0x79, 0x74, 0x79, 0x63, 0x6f, 0x6f, 0x6e, 0x2f, 0x62,
+	0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x2d, 0x61, 0x70, 0x69, 0x2f, 0x67, 0x65, 0x6e, 0x2f, 0x67,
+	0x6f, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x62, 0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x2f,
+	0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0xa2, 0x02, 0x03, 0x42, 0x41, 0x58, 0xaa, 0x02, 0x0e, 0x42,
+	0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x2e, 0x41, 0x70, 0x69, 0x2e, 0x56, 0x31, 0xca, 0x02, 0x0e,
+	0x42, 0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x5c, 0x41, 0x70, 0x69, 0x5c, 0x56, 0x31, 0xe2, 0x02,
+	0x1a, 0x42, 0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x5c, 0x41, 0x70, 0x69, 0x5c, 0x56, 0x31, 0x5c,
+	0x47, 0x50, 0x42, 0x4d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0xea, 0x02, 0x10, 0x42, 0x75,
+	0x74, 0x74, 0x6f, 0x6e, 0x73, 0x3a, 0x3a, 0x41, 0x70, 0x69, 0x3a, 0x3a, 0x56, 0x31, 0x92, 0x41,
+	0x5e, 0x12, 0x05, 0x32, 0x03, 0x31, 0x2e, 0x30, 0x2a, 0x01, 0x01, 0x72, 0x52, 0x0a, 0x23, 0x62,
+	0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x2d, 0x61, 0x70, 0x69, 0x20, 0x67, 0x52, 0x50, 0x43, 0x2d,
+	0x67, 0x61, 0x74, 0x65, 0x77, 0x61, 0x79, 0x20, 0x72, 0x65, 0x70, 0x6f, 0x73, 0x69, 0x74, 0x6f,
+	0x72, 0x79, 0x12, 0x2b, 0x68, 0x74, 0x74, 0x70, 0x73, 0x3a, 0x2f, 0x2f, 0x67, 0x69, 0x74, 0x68,
 	0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x73, 0x75, 0x6e, 0x64, 0x61, 0x79, 0x74, 0x79, 0x63,
-	0x6f, 0x6f, 0x6e, 0x2f, 0x62, 0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x2d, 0x61, 0x70, 0x69, 0x2f,
-	0x67, 0x65, 0x6e, 0x2f, 0x67, 0x6f, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x62, 0x75, 0x74,
-	0x74, 0x6f, 0x6e, 0x73, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0xa2, 0x02, 0x03, 0x42, 0x41,
-	0x58, 0xaa, 0x02, 0x0e, 0x42, 0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x2e, 0x41, 0x70, 0x69, 0x2e,
-	0x56, 0x31, 0xca, 0x02, 0x0e, 0x42, 0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x5c, 0x41, 0x70, 0x69,
-	0x5c, 0x56, 0x31, 0xe2, 0x02, 0x1a, 0x42, 0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x5c, 0x41, 0x70,
-	0x69, 0x5c, 0x56, 0x31, 0x5c, 0x47, 0x50, 0x42, 0x4d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61,
-	0xea, 0x02, 0x10, 0x42, 0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x3a, 0x3a, 0x41, 0x70, 0x69, 0x3a,
-	0x3a, 0x56, 0x31, 0x92, 0x41, 0x5e, 0x12, 0x05, 0x32, 0x03, 0x31, 0x2e, 0x30, 0x2a, 0x01, 0x01,
-	0x72, 0x52, 0x0a, 0x23, 0x62, 0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x2d, 0x61, 0x70, 0x69, 0x20,
-	0x67, 0x52, 0x50, 0x43, 0x2d, 0x67, 0x61, 0x74, 0x65, 0x77, 0x61, 0x79, 0x20, 0x72, 0x65, 0x70,
-	0x6f, 0x73, 0x69, 0x74, 0x6f, 0x72, 0x79, 0x12, 0x2b, 0x68, 0x74, 0x74, 0x70, 0x73, 0x3a, 0x2f,
-	0x2f, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x73, 0x75, 0x6e, 0x64,
-	0x61, 0x79, 0x74, 0x79, 0x63, 0x6f, 0x6f, 0x6e, 0x2f, 0x62, 0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73,
-	0x2d, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x6f, 0x6f, 0x6e, 0x2f, 0x62, 0x75, 0x74, 0x74, 0x6f, 0x6e, 0x73, 0x2d, 0x61, 0x70, 0x69, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -191,16 +330,20 @@ func file_buttons_api_v1_auth_proto_rawDescGZIP() []byte {
 	return file_buttons_api_v1_auth_proto_rawDescData
 }
 
-var file_buttons_api_v1_auth_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_buttons_api_v1_auth_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
 var file_buttons_api_v1_auth_proto_goTypes = []interface{}{
 	(*GetRedirectURLRequest)(nil),  // 0: buttons.api.v1.GetRedirectURLRequest
 	(*GetRedirectURLResponse)(nil), // 1: buttons.api.v1.GetRedirectURLResponse
+	(*GetCallbackRequest)(nil),     // 2: buttons.api.v1.GetCallbackRequest
+	(*GetCallbackResponse)(nil),    // 3: buttons.api.v1.GetCallbackResponse
 }
 var file_buttons_api_v1_auth_proto_depIdxs = []int32{
 	0, // 0: buttons.api.v1.AuthService.GetRedirectURL:input_type -> buttons.api.v1.GetRedirectURLRequest
-	1, // 1: buttons.api.v1.AuthService.GetRedirectURL:output_type -> buttons.api.v1.GetRedirectURLResponse
-	1, // [1:2] is the sub-list for method output_type
-	0, // [0:1] is the sub-list for method input_type
+	2, // 1: buttons.api.v1.AuthService.GetCallback:input_type -> buttons.api.v1.GetCallbackRequest
+	1, // 2: buttons.api.v1.AuthService.GetRedirectURL:output_type -> buttons.api.v1.GetRedirectURLResponse
+	3, // 3: buttons.api.v1.AuthService.GetCallback:output_type -> buttons.api.v1.GetCallbackResponse
+	2, // [2:4] is the sub-list for method output_type
+	0, // [0:2] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -236,6 +379,30 @@ func file_buttons_api_v1_auth_proto_init() {
 				return nil
 			}
 		}
+		file_buttons_api_v1_auth_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetCallbackRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_buttons_api_v1_auth_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetCallbackResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -243,7 +410,7 @@ func file_buttons_api_v1_auth_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_buttons_api_v1_auth_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   2,
+			NumMessages:   4,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
